--- a/src/components/ProfileCompany/Styles.module.css
+++ b/src/components/ProfileCompany/Styles.module.css
@@ -15,11 +15,11 @@
   margin-right: auto !important;
   margin-top: 20px !important;
   box-shadow: 5px 5px 5px 5px rgba(206, 206, 206, 0.938);
-  background-image: url("https://res.cloudinary.com/dle6fzc1o/image/upload/v1604661577/backgroundimage/Untitled_design_1_aggaly.png");
+  background-image: url("https://res.cloudinary.com/dle6fzc1o/image/upload/v1605622564/backgroundimage/Untitled_design_2_okmnmp.png");
   background-size: cover;
 }
 .div {
-  width: 80% !important;
+  width: 80%;
   margin-left: auto !important;
   margin-right: auto !important;
 
@@ -34,10 +34,11 @@
 }
 
 .imgProfile {
-  width: 120px;
+  width: 150px;
   margin-bottom: 0 !important;
-  margin-top: 45%;
-  height: 110px;
+  margin-top: 15%;
+  height: 140px;
+  box-shadow: 3px 3px 3px rgba(226, 226, 226, 0.938);
 }
 .nameProfile {
   width: 150px;
@@ -47,7 +48,7 @@
 .dataInfo {
   box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938);
   background-color: white;
-  height: 260px;
+  height: 288px;
   color: rgb(63, 69, 95);
 }
 .dataInfo div {
@@ -55,6 +56,7 @@
   margin-left: 15px;
   margin-top: 15px;
   margin-right: 15px;
+  font-family: "Raleway", sans-serif;
   /* box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938); */
 }
 
@@ -80,7 +82,7 @@
   text-transform: uppercase;
   transition: 0.5s;
   background-size: auto;
-  color: rgb(63, 69, 95);
+  color: #ff512f;
   font-weight: bolder;
   font-size: 15px;
 
@@ -120,8 +122,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
+  text-align: justify;
+  font-family: "Raleway", sans-serif;
+
   /* -webkit-line-clamp: 6;
   -webkit-box-orient: vertical; */
+}
+.titleAbout {
+  font-family: "Josefin Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .dataAbout {
   box-shadow: 3px 3px 3px 3px rgba(212, 212, 212, 0.938);
@@ -159,20 +168,31 @@
 .uploadPhoto {
   /* position: absolute; */
   /* margin: 90% 10% 0 0; */
-  margin-top: 105%;
+  margin-top: 80%;
   margin-left: 5%;
   color: black;
   z-index: 1000;
 }
 .icon {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-color: white;
   border-radius: 5px;
+  color: #ff512f;
+  font-weight: bolder;
 }
 
 @media only screen and (max-width: 768px) {
   .dataInfo {
     height: auto;
+  }
+  .profile {
+    width: 100% !important;
+  }
+  .div {
+    width: 100%;
+  }
+  .header {
+    width: 100%;
   }
 }
