--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,11 @@ code {
   ) !important; */
   text-decoration: none !important;
   background-color: transparent !important;
-  border-radius: 5px !important;
-  box-shadow: 3px 3px 3px rgba(177, 176, 176, 0.932) !important;
+  /* border-radius: none !important; */
+  box-shadow: none;
+  border: none;
+
+  /* box-shadow: 3px 3px 3px rgba(177, 176, 176, 0.932) !important; */
 }
 
 .nav-link.active,
@@ -35,6 +38,9 @@ code {
     rgb(0 55 255) 100%
   ) !important; */
   text-decoration: none !important;
+  box-shadow: none;
+  border: none;
+
   /* background-color: transparent !important;
   border-radius: 5px !important;
   box-shadow: 3px 3px 3px rgba(177, 176, 176, 0.932) !important; */
